--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     content="https://github.com/ramprasathmk/Portfolio/blob/master/Images/portfolio-readme1.png">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://ramprasathmk.github.io/Portfolio">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Ramprasath | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
